css/style.css
/* ... */
@media screen and (max-width: 1336px) {
	.members {
		padding: var(--padding-vert) var(--padding-side);
	}
}

.members__header {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 60px;
}

@media screen and (max-width: 1366px) {
	.members__header {
		justify-content: center;
	}
}

.members__switch-bts {
	display: flex;
	align-items: center;
	gap: 14px;
}

.members__btn {
	background-color: var(--lighter-dark);
}

.members__btn:hover {
	background-color: var(--btn-accent);
}

.members__heading {
	margin: 0;
	font-family: "Merriweather", sans-serif;
	font-weight: 400;
	font-size: 54px;
	line-height: 1.2;
	text-transform: uppercase;
	color: var(--lighter-dark);
}

@media screen and (max-width: 1366px) {
	.members__heading {
		font-size: 36px;
		margin-bottom: 40px;
	}
}

.members__prev {
	display: block;
	width: 44px;
	height: 44px;
	border: none;
	border-radius: 50%;
	background-image: url('../img/arrow-left.svg');
}

.members__next {
	display: block;
	width: 44px;
	height: 44px;
	border: none;
	border-radius: 50%;
	background-image: url('../img/arrow-right.svg');
}

.members__slider {
	overflow-x: hidden;
	padding: 2px 0;
}

@media screen and (max-width: 1366px) {
	.members__slider {
		width: 355px;
		margin: 0 auto;
	}
}

.members__content {
	display: flex;
	justify-content: start;
	/* gap: 94px; */
	transition: transform 0.4s ease-in-out;
}

@media screen and (max-width: 1366px) {
	.members__content {
		gap: 20px;
		width: 355px;
		padding: 0 10px;
		margin-left: -20px;
	}
}

.members__item {
	display: flex;
	flex-direction: column;
	align-items: center;
	position: relative;
	text-align: center;
	width: 394px;
	flex: 1 0 auto;
}

@media screen and (max-width: 1366px) {
	.members__item {
		width: 355px;
		flex: 1 0 auto;
		justify-content: center;
	}
}

@media screen and (min-width: 1366px) {
	.members__item:first-child {
		padding-left: 37px;
	}

	.members__item:last-child {
		padding-right: 37px;
	}
}

.members__ava {
	width: 320px;
	height: 320px;
	margin-bottom: 28px;
	object-fit: none;
	object-position: bottom;
	border-radius: 50%;
	background-image: url('../img/ava-back.jpg');
}

.members__name {
	margin: 0;
	margin-bottom: 6px;
	font-family: "Golos Text", sans-serif;
	font-weight: 600;
	font-size: 24px;
	line-height: 1.2;
	color: var(--lighter-dark);
}

.members__about {
	margin-bottom: 20px;
	font-family: "Golos Text", sans-serif;
	font-weight: 400;
	font-size: 20px;
	line-height: 1.2;
	color: var(--lighter-dark);
	opacity: 0.6;
}

.members__link {
	box-sizing: border-box;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 12px;
	width: 113px;
	height: 35px;
	border: 1px solid #3057a2;
	border-radius: 62px;
	font-family: "Golos Text", sans-serif;
	font-weight: 500;
	font-size: 16px;
	line-height: 1.2;
	color: #3057a2;
	text-decoration: none;
}

.members__link:hover {
	color: #fff;
	background-color: #3057a2;
}

/* Footer */
.footer {
	padding: 40px var(--padding-side) 72px;
	background-color: #E9DED4;
}

.footer__text {
	max-width: 1222px;
	margin: 0 auto;
	font-family: "Golos Text", sans-serif;
	font-weight: 400;
	font-size: 16px;
	line-height: 1.2;
	color: var(--lighter-dark);
	opacity: 0.6;
}

/* JS */
.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

